# cgi

./: Cargo.toml  build.rs
assets/shaders/: triangle.frag  triangle.vert  triangle_spotlight.frag  triangle_spotlight.vert
hack/: obj_to_cgi.py
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: debug.rs  game.rs  main.rs  render_gl.rs  resources.rs  triangle.rs
src/game/: camera.rs  controls.rs  cube.rs  gamecube.rs  gamelight.rs  mod.rs  time.rs
src/models/: cube.rs  mod.rs  suzanne.cgi  suzanne.rs  world_model.rs
src/primitives/: camera.rs  input.rs  light.rs  mod.rs  object_draw.rs  projection.rs  spatial.rs  spotlight.rs  spotlight_draw.rs  time.rs  triangle.rs
src/render_gl/: buffer.rs  color_buffer.rs  data.rs  mod.rs  shader.rs  viewport.rs
