[package]
name = "cgi"
version = "0.1.0"
authors = ["Omer Tuchfeld <otuchfel@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "2.3.1"

[dependencies]
gl = { path = "lib/gl" }
failure = "0.1.8"
render_gl_derive = { path = "render_gl_derive"}
vec-2-10-10-10 = "0.1.2"

[dependencies.sdl2]
version = "0.34.3"
features = ["bundled", "static-link"]

[features]
gl_debug = ["gl/debug"]
