[package]
name = "cgi"
version = "0.1.0"
authors = ["Omer Tuchfeld <otuchfel@redhat.com>"]
edition = "2018"

[build-dependencies]
walkdir = "2.3.1"

[dependencies]
gl = { path = "lib/gl" }
failure = "0.1.8"
render_gl_derive = { path = "render_gl_derive"}
vec-2-10-10-10 = "0.1.2"
nalgebra = "0.26.1"
maplit = "1.0.2"
rand = "0.8.3"
image = "0.23.14"

[dependencies.sdl2]
version = "0.35.2"
# features = ["bundled", "static-link"]

[features]
gl_debug = ["gl/debug"]
