[package]
name = "cgi"
version = "0.1.0"
authors = ["Omer Tuchfeld <otuchfel@redhat.com>"]
edition = "2018"

[build-dependencies]
walkdir = "2.3.1"

[dependencies]
gl = { path = "lib/gl" }
failure = "0.1.8"
render_gl_derive = { path = "render_gl_derive"}
vec-2-10-10-10 = { git = "https://github.com/omertuc/vec-2-10-10-10-rs", branch = "fix" }
nalgebra = "0.32"
maplit = "1.0.2"
rand = "0.8.3"
image = "0.24"

[dependencies.sdl2]
version = "0.36"
# features = ["bundled", "static-link"]

[features]
gl_debug = ["gl/debug"]
